# Embedded-Drone-TUDelft

./: .gitignore  .gitlab-ci.yml  README.md  log_file.csv  my_interface.py
.gitlab/issue_templates/: issuetemplate.md
dronecode/: Cargo.toml
dronecode/src/: control.rs  logger.rs  main.rs  yaw_pitch_roll.rs
dronecode/src/control/: kalman.rs  motor_control.rs  pid_controller.rs  state_machine.rs
dronecode/src/logger/: logger_storage.rs
dronecode/src/storage/: mod.rs
protocol/: Cargo.toml
protocol/src/: data_format.rs  error.rs  format.rs  lib.rs
runner/: Cargo.toml
runner/src/: app.rs  file_writer.rs  main.rs  runner_thread_layer.rs  termion_ui.rs  ui.rs
