[package]
name = "drone-goes-brrr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tudelft-quadrupel = {version="2"}
micromath = "2.0.0"
fixed_trigonometry = "0.4.3"
protocol = {path = "../protocol"}