[package]
name = "drone-goes-brrr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tudelft-quadrupel = {version="2", git = "https://gitlab.ewi.tudelft.nl/cese/embedded-systems-lab/tudelft-quadrupel.git", branch = "2-read-imu-attempt6"}
micromath = "2.0.0"
fixed_trigonometry = "0.4.3"
protocol = {path = "../protocol"}