[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.152", default-features = false, features = ["alloc"]}
postcard = "1.0.4"
heapless = "0.7.16"

[dependencies.fixed]
version = "1.23"
features = ["serde"]