cargo-features = ["per-package-target"]

[package]
name = "protocol"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-linux-gnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.152", default-features = false, features = ["alloc"]}
postcard = "1.0.4"
heapless = "0.7.16"
crc16 = "0.4.0"
crc-any = "2.4.3"

[dependencies.fixed]
version = "1.23"
features = ["serde"]