cargo-features = ["per-package-target"]


[package]
name = "runner"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-linux-gnu"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tudelft-serial-upload = "1"
serial2 = "0.1.7"
protocol = {path = "../protocol"}
gilrs = "0.10.1"
termion = "*"
libudev-sys = "0.1.4"
csv = "1.2.1"
serde = {version = "1.0.159", features = ["derive"]}

[dependencies.fixed]
version = "1.23"
features = ["serde"]
