cargo-features = ["per-package-target"]


[package]
name = "runner"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-linux-gnu"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tudelft-serial-upload = "1"
serial2 = "0.1.7"
protocol = {path = "../protocol"}
gilrs = "0.10.1"
termion = "*"
libudev-sys = "0.1.4"
bitflags = "1.3"
cassowary = "0.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
csv = "1.2.1"
# termion = { version = "2.0.1", optional = true }
tui = { version = "0.19", default-features = false, features = ['termion'] }
cursive = "0.15.0"
rand = "0.8.5"
argh = "0.1.10"

[dependencies.fixed]
version = "1.23"
features = ["serde"]
